# Flutter_Head-Unit

./: CMakeLists.txt  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_head_unit/: MainActivity.kt
bundle/: flutter_head_unit
bundle/data/flutter_assets/: AssetManifest.json  FontManifest.json  NOTICES.Z  version.json
bundle/data/flutter_assets/assets/music/: copyright
elinux/: CMakeLists.txt
elinux/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.dart  main.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/common/: app_drawer.dart  backup.dart  clock.dart  welcome.dart
lib/ffi/: CMakeLists.txt  commonapi.cpp
lib/ffi/fidl/: CarControl.fdepl  HeadUnit.fdepl  HeadUnit.fidl
lib/ffi/include/: HeadUnitStubImpl.hpp
lib/ffi/src/: CarControlProxy.cpp  HeadUnitStubImpl.cpp  ParkDistanceControlProxy.cpp  commonapi.cpp
lib/ffi/src-gen/core/v0/commonapi/: CommonTypes.hpp  HeadUnit.hpp  HeadUnitProxy.hpp  HeadUnitProxyBase.hpp  HeadUnitStub.hpp  HeadUnitStubDefault.hpp
lib/ffi/src-gen/someip/v0/commonapi/: CommonTypesSomeIPDeployment.hpp  HeadUnitSomeIPCatalog.json  HeadUnitSomeIPDeployment.cpp  HeadUnitSomeIPDeployment.hpp  HeadUnitSomeIPProxy.cpp  HeadUnitSomeIPProxy.hpp  HeadUnitSomeIPStubAdapter.cpp  HeadUnitSomeIPStubAdapter.hpp
lib/music/: album_cover.dart  controler.dart  music_app.dart  music_player.dart  playlist_view.dart  progressbar.dart  volume.dart
lib/pages/: car_info.dart  music_player.dart  settings.dart  video_app.dart  video_player.dart
lib/pdc/: radio.dart  sensor_view.dart
lib/provider/: app_controller.dart  car_control_provider.dart  commonAPI.dart  pdc_provider.dart  theme_provider.dart
lib/settings/: about.dart  brigtness.dart  settings.dart  theme.dart
lib/ui/: app_drawer.dart  gear_selection.dart  music_player.dart
lib/video/: video_app.dart  video_title.dart
linux/: CMakeLists.txt  libs  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
